@@ -18,19 +18,18 @@ Description: Apply and visualize conditional formatting to data frames in R.
 License: BSD_3_clause + file LICENSE
 LazyData: TRUE
 NeedsCompilation: no
-Depends:
-    xlsx
 Imports:
     htmlTable,
     scales,
     dplyr,
-    assertthat,
     lazyeval,
     knitr,
     rmarkdown (>= 0.9.6),
     gplots
 Suggests:
     shiny,
-    testthat (>= 1.0)
+    testthat (>= 1.0),
+    xlsx (>= 0.5.7),
+    rJava
 VignetteBuilder: knitr
 RoxygenNote: 5.0.1
