@@ -20,7 +20,6 @@ export(show_columns_)
 export(show_rows)
 export(show_rows_)
 export(theme_htmlTable)
-importFrom(assertthat,are_equal)
 importFrom(dplyr,filter_)
 importFrom(dplyr,select_vars_)
 importFrom(dplyr,tbl_df)
@@ -41,7 +40,3 @@ importFrom(scales,hue_pal)
 importFrom(scales,muted)
 importFrom(scales,rescale)
 importFrom(scales,seq_gradient_pal)
-importFrom(xlsx,addDataFrame)
-importFrom(xlsx,createSheet)
-importFrom(xlsx,createWorkbook)
-importFrom(xlsx,saveWorkbook)
