@@ -96,7 +96,6 @@ applyrule.rule_fill_gradient_ <- function(rule, finalformat, xfiltered, xview, .
 }
 
 #' @importFrom scales seq_gradient_pal rescale
-#' @importFrom assertthat are_equal
 rule_fill_gradient_common <- function(rule, finalformat, xview,
                                       columns, values_determining_color) {
   if (identical(rule$limits, NA)) {
@@ -109,7 +108,7 @@ rule_fill_gradient_common <- function(rule, finalformat, xview,
 
   values_rescaled <- scales::rescale(x = values_determining_color, from = limits)
   colours_for_values <- col_scale(values_rescaled)
-  assertthat::are_equal(length(colours_for_values), nrow(xview))
+  stopifnot(identical(length(colours_for_values), nrow(xview)))
   colours_for_values <- matrix(colours_for_values,
                                nrow = nrow(xview), ncol = ncol(xview), byrow = FALSE)
 
